<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="sg.edu.nus.comp.orbital.synchro.ProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile_photo"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/profile"
                android:cropToPadding="true"
                android:elevation="3dp"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/background_dark_grey" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/header_cover_image"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/colour_stacks"/>

                <TextView
                    android:id="@+id/user_profile_name"
                    android:text="Hermione Granger"
                    style="@style/MainHeader"
                    android:layout_below="@id/header_cover_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/background_dark_grey"
                    android:gravity="center_horizontal|bottom"
                    android:paddingBottom="32dp"/>

            </RelativeLayout>
        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/labelDescription"
                android:text="@string/about_me"
                style="@style/Header1" />

            <TextView
                android:text="@string/small_text"
                android:id="@+id/valueDescription"
                style="@style/TextBody1"/>

            <TextView
                android:text="@string/faculty"
                android:id="@+id/labelFaculty"
                style="@style/Header1" />

            <TextView
                android:id="@+id/valueFaculty"
                style="@style/TextBody1" />

            <TextView
                android:text="@string/first_major"
                android:id="@+id/labelFirstMajor"
                style="@style/Header1" />

            <TextView
                android:id="@+id/valueFirstMajor"
                style="@style/TextBody1" />

            <TextView
                android:text="@string/matriculation_year"
                android:id="@+id/labelMatriculationYear"
                style="@style/Header1"/>

            <TextView
                android:id="@+id/valueMatriculationYear"
                style="@style/TextBody1" />

        </LinearLayout>

        <TextView
            android:text="@string/modules_taken"
            android:id="@+id/labelModulesTaken"
            style="@style/Header1"
            android:paddingLeft="15dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_margin="5dp">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</ScrollView>